tenants/tenant-ejay/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    tenant: tenant-ejay
  name: web
  namespace: tenant-ejay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      tenant: tenant-ejay
  template:
    metadata:
      labels:
        app: web
        tenant: tenant-ejay
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: web
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
