tenants/tenant-ejay/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: tenant-ejay
spec:
  ingressClassName: nginx
  rules:
  - host: web.tenant-ejay.local.dev
    http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 80
        path: /
        pathType: Prefix
